<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_settings_toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/settings_image_quality" />

            <TextView
                android:id="@+id/activity_settings_preview_mobile"
                style="@style/Activity.Settings.TextView"
                android:drawableEnd="@drawable/arrow_right"
                android:text="@string/settings_image_quality_preview_mobile" />

            <TextView
                android:id="@+id/activity_settings_preview_wifi"
                style="@style/Activity.Settings.TextView"
                android:drawableEnd="@drawable/arrow_right"
                android:text="@string/settings_image_quality_preview_wifi" />

            <TextView
                android:id="@+id/activity_settings_detail_mobile"
                style="@style/Activity.Settings.TextView"
                android:drawableEnd="@drawable/arrow_right"
                android:text="@string/settings_image_quality_detail_mobile" />

            <TextView
                android:id="@+id/activity_settings_detail_wifi"
                style="@style/Activity.Settings.TextView"
                android:drawableEnd="@drawable/arrow_right"
                android:text="@string/settings_image_quality_detail_wifi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/settings_others" />

            <TextView
                android:id="@+id/activity_settings_about_us"
                style="@style/Activity.Settings.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_us" />

            <Button
                android:id="@+id/activity_settings_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/settings_sign_out" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>